<resources>
    <string name="app_name">HyuckTalk</string>
    <string name="rc_color">splash_background</string>
    <string name="bottom_menu_people">People</string>
    <string name="bottom_menu_chat">Chat</string>
    <string name="bottom_menu_account">Account</string>
    <string name="sign_up">회원가입</string>
    <string name="login">로그인</string>
    <string name="password">비밀번호</string>
    <string name="id">아이디</string>
    <string name="email">이메일</string>
    <string name="name">이름</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
